style: fix login z-index

--- a/src/Styles/Components.css
+++ b/src/Styles/Components.css
@@ -211,7 +211,7 @@
      flex-direction: column; 
      align-items: center;
      position: fixed;
-     z-index: 1;
+     z-index: 4;
      top: 40vh;
      left: 55vh; 
     animation: show 500ms ease;
